--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <input class="btn btn-primary" type="submit" value="@Messages("profile.create.save")">
+                    <input class="btn btn-primary pull-right" type="submit" value="@Messages("profile.create.save")">
                 </div>
                 }
             </div>
