--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -8,29 +8,24 @@
         tagList: Option[List[models.profile.TagWord]] = None,
         isThisMyProfile: Boolean = false)(implicit request: RequestHeader)
 
-@pageScripts = {
-    <script type="text/javascript">alert("hello !");</script>
-}
-
-@main(Messages("profile.title"), footerScripts = pageScripts) {
-
-
+@main(Messages("profile.title")) {
     <div class="container host-container">
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 @defining(if(userProfile.getAvatarImage != null){userProfile.getAvatarImage.getTransformByName("thumbnail").getUrl}else{""}){ avatarUrl =>
-                    @views.html.profile.profileHeader(userProfile.profileLinkName, avatarUrl)
+                    @views.html.profile.profileHeader(userProfile.profileLinkName, avatarUrl, false)
                 }
                 <div class="row">
                     <div class="col-xs-12 col-md-6 big-margin-top">
                         <section>
                             <article>
-                                <h1 class="page-header">@userProfile.getOwner.fullName</h1>
+                                <h1 class="page-header">@userProfile.getOwner.firstName</h1>
                                 <h2>@userProfile.aboutMeHeadline</h2>
                                 @shared.grade(inputId = "host-grade", initialValue = userProfile.getOwner.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = userProfile.getOwner.getNrOfRatings)
-                                @RatingController.renderRateForm(userProfile.getOwner, routes.UserProfileController.viewProfileByName(userProfile.profileLinkName).url)(request)
-                                <div class="memberid clearfix"><p><strong>@Messages("profile.memberid.text")</strong>&nbsp;@userProfile.getOwner.objectId</p></div>
-                                <a href="@routes.UserProfileController.addFavorite(userProfile.getOwner.objectId.toString())" target="_blank">Lägg till som favorit</a>
+                                @RatingController.renderUserRateForm(userProfile.getOwner, routes.UserProfileController.viewProfileByName(userProfile.profileLinkName).url)(request)
+                                @* Member id hidden for now:
+                                <div class="memberid clearfix"><p><strong>@Messages("profile.memberid.text")</strong>&nbsp;@userProfile.getOwner.objectId</p></div>*@
+                                <a href="@routes.UserProfileController.addFavorite(userProfile.getOwner.objectId.toString())" target="_blank"><span class="glyphicon glyphicon-paperclip"></span>&nbsp;Lägg till som favorit</a>
                                 <a href="@routes.UserProfileController.listFavorites()">Visa favoriter</a>
 
                                 <div class="breadtext">
