--- a/app/views/test/json.scala.html
+++ b/app/views/test/json.scala.html
@@ -6,11 +6,20 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.1.11.1.min.js"></script>
         <script>
         $(document).ready(function(){
-            $("button").click(function(){
-                $.get("/profile/favorite/isFav?userCredentialObjectId=932cb1bc-7676-4f7e-84a3-5ab4ed0ed9dc",function(data,status){
+            $("#getResult").click(function(){
+
+                alrt('test');
+
+                /*
+                var q = "/profile/favorite/isFav?userCredentialObjectId=932cb1bc-7676-4f7e-84a3-5ab4ed0ed9dc&tid=" + Date.now();
+
+
+
+                $.get(q,function(data,status){
                 alert("Data: " + data + "\nStatus: " + status);
                 $("#result" ).text(data);
                 });
+                */
             });
 
         });
@@ -18,7 +27,7 @@
     </head>
     <body>
 
-        <button>Send an HTTP GET request to a page and get the result back</button>
+        <button id="getResult">Send an HTTP GET request to a page and get the result back</button>
         <p id="result"></p>
 
         <br>
